--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -1,16 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
   
 h1 {
     font-family: 'Albert Sans', sans-serif;
     font-size: 6.25rem !important;
 font-weight: 400;
 font-style: Regular;
-leading-trim: NONE;
-line-height: 134.4px;
+line-height: 6.25rem;
 letter-spacing: -5%;
-text-align: center;
-
 }
 
 
@@ -19,19 +16,44 @@ text-align: center;
 font-weight: 250;
 font-style: Thin;
  font-size: 6.25rem !important;
-leading-trim: NONE;
-line-height: 134.4px;
+line-height: 6.25rem;
 letter-spacing: -5%;
-
 }
 
 
-/* html {
+
+.paragraph-17-reguler {
+font-family: "Inter", sans-serif;
+font-weight: 400;
+font-style: Regular;
+font-size: 1.25rem !important;
+letter-spacing: -1%;
+}
+
+.desc-hero-screen {
+font-family: 'Albert Sans', sans-serif;
+font-weight: 400;
+font-style: Regular;
+font-size: 2.188rem !important;
+line-height: 120%;
+letter-spacing: -1%;
+}
+
+@media (max-width: 1500px) {
+ html {
     font-size: 16px;
   }
+}
 
-  @screen lg {
-    html {
-      font-size: 16px;
-    } */
-  /* } */
+@media (max-width: 1024px) {
+html {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 768px) {
+html {
+    font-size: 10px;
+  }
+}
+
