--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -1,15 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
 h1 {
   font-family: "Albert Sans", sans-serif;
   font-size: 6.25rem !important;
   font-weight: 400;
   font-style: Regular;
-  leading-trim: NONE;
-  line-height: 134.4px;
+  line-height: 6.25rem;
   letter-spacing: -5%;
-  text-align: center;
 }
 
 .h1-large {
@@ -17,99 +15,35 @@ h1 {
   font-weight: 250;
   font-style: Thin;
   font-size: 6.25rem !important;
-  leading-trim: NONE;
-  line-height: 134.4px;
+  line-height: 6.25rem;
   letter-spacing: -5%;
 }
 
-.hero-title-main {
-  font-family: "Albert Sans", sans-serif;
-  font-size: 6.25rem !important;
+.paragraph-17-reguler {
+  font-family: "Inter", sans-serif;
   font-weight: 400;
   font-style: Regular;
-  line-height: 135px;
-  letter-spacing: -5%;
-  text-align: left;
-  color: #ffffff;
-  margin: 0;
-}
-
-.hero-title-sub {
-  font-family: "Albert Sans", sans-serif;
-  font-size: 6.25rem !important;
-  font-weight: 100;
-  font-style: Thin;
-  line-height: 60px;
-  letter-spacing: -5%;
-  text-align: left;
-  color: #ffffff;
-  margin: 0;
-}
-
-.hero-description {
-  font-family: "Inter", sans-serif;
-  font-weight: 200;
-  font-style: normal;
-  font-size: 20px;
-  line-height: 150%;
+  font-size: 1.25rem !important;
   letter-spacing: -1%;
-  color: #ffffff;
-  margin-bottom: 24px;
-  text-align: left;
 }
 
-@media (max-width: 768px) {
-  .hero-title-main,
-  .hero-title-sub {
-    font-size: 4rem !important;
-    line-height: 86px;
-  }
-
-  .hero-description {
-    font-size: 16px;
-    margin-bottom: 20px;
-  }
-}
-
-.creator-name {
+.desc-hero-screen {
   font-family: "Albert Sans", sans-serif;
-  font-weight: 600;
-  font-size: 25px;
-  line-height: 96%;
-  letter-spacing: 0%;
-  color: white;
-  margin: 0;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-.creator-experience {
-  font-family: "Inter", sans-serif;
-  font-weight: 200;
-  font-size: 20px;
-  line-height: 150%;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 2.188rem !important;
+  line-height: 120%;
   letter-spacing: -1%;
-  color: white;
-  margin: 0;
 }
 
-@media (max-width: 768px) {
-  .creator-name {
-    font-size: 20px;
-  }
-
-  .creator-experience {
+@media (max-width: 1500px) {
+  html {
     font-size: 16px;
   }
 }
 
-@media (max-width: 640px) {
-  .creator-name {
-    font-size: 18px;
-  }
-
-  .creator-experience {
+@media (max-width: 1024px) {
+  html {
     font-size: 14px;
   }
 }
@@ -177,13 +111,7 @@ h1.creator-detail-name {
 }
 
 @media (max-width: 768px) {
-  h1.creator-detail-name {
-    font-size: 28px !important;
-  }
-}
-
-@media (max-width: 640px) {
-  h1.creator-detail-name {
-    font-size: 24px !important;
+  html {
+    font-size: 10px;
   }
 }
